[build-system]
build-backend = "scikit_build_core.build"
requires = ["scikit-build-core >=0.4.3", "nanobind >=1.3.2"]

[project]
authors = [
  {name = "PyVista Developers", email = "info@pyvista.org"}
]
classifiers = [
  "License :: OSI Approved :: GNU Affero General Public License v3",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14"
]
dependencies = [
  "numpy"
]
description = "Python interface to tetgen"
name = "tetgen"
readme = "README.rst"
requires-python = ">=3.10,<3.15"
version = "0.9.dev0"

[project.optional-dependencies]
docs = [
  "pyvista",
  "Sphinx",
  "imageio",
  "matplotlib",
  "pyacvd",
  "pydata-sphinx-theme",
  "pymeshfix",
  "pyvista[trame]",
  "sphinx-copybutton",
  "sphinx-notfound-page>=0.3.0",
  "sphinx_gallery"
]
extras = [
  "pyvista",
  "meshio",
  "pymeshfix"
]
tests = [
  "pymeshfix>=0.13.4",
  "pyvista",
  "pytest",
  "meshio",
  "pytest-cov"
]

[project.urls]
'Bug Reports' = 'https://github.com/pyvista/tetgen/issues'
Documentation = 'https://tetgen.pyvista.org/'
Homepage = 'https://github.com/pyvista/tetgen'
'Source Code' = 'https://github.com/pyvista/tetgen'

[tool.cibuildwheel]
archs = ["auto64"]  # 64-bit only
before-build = "pip install abi3audit"
build = "cp310-* cp311-* cp312-*"  # 3.12+ are abi3 wheels
skip = "*musllinux*"
test-command = "pytest {project}/tests -vv"
test-requires = "pytest pyvista meshio pymeshfix"

[tool.cibuildwheel.linux]
repair-wheel-command = [
  "auditwheel repair -w {dest_dir} {wheel}",
  "bash tools/audit_wheel.sh {wheel}"
]

[tool.cibuildwheel.macos]
archs = ["native"]

[tool.cibuildwheel.macos.environment]
MACOSX_DEPLOYMENT_TARGET = "10.14"  # Needed for full C++17 support on MacOS

[tool.codespell]
ignore-words-list = ['THIRDPARTY']
quiet-level = 3
skip = '*.cxx,*.h,*.gif,*.png,*.jpg,*.js,*.html,*.doctree,*.ttf,*.woff,*.woff2,*.eot,*.mp4,*.inv,*.pickle,*.ipynb,flycheck*,./.git/*,./.hypothesis/*,*.yml,./doc/build/*,./doc/images/*,./dist/*,*~,.hypothesis*,./doc/source/examples/*,*cover,*.dat,*.mac,build,./docker/mapdl/v*,./factory/*,PKG-INFO,*.mypy_cache/*'

[tool.pytest.ini_options]
junit_family = "legacy"

[tool.ruff]
indent-width = 4
line-length = 99

[tool.scikit-build]
wheel.py-api = "cp312"
